--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
+    "moment": "^2.30.1",
     "mongoose": "^8.3.2"
   },
   "devDependencies": {
