--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "jsonwebtoken": "^9.0.2",
     "mailgun-js": "^0.22.0",
     "moment": "^2.30.1",
-    "mongoose": "^8.3.2"
+    "moment-timezone": "^0.5.45",
+    "mongoose": "^8.3.2",
+    "nodemailer": "^6.9.15"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
